# jitterentropy-library

./: .gitignore  CMakeLists.txt  Makefile  jitterentropy-base-user.h  jitterentropy-internal.h  jitterentropy.h
arch/: jitterentropy-base-x86-windows.h
include/: jitterentropy.h
src/: jitterentropy-base.c  jitterentropy-gcd.h  jitterentropy-health.c  jitterentropy-noise.c  jitterentropy-sha3.c  jitterentropy-sha3.h
tests/gcd/: gcd.c
tests/raw-entropy/recording_userspace/: CMakeLists.txt
